fix: fixed spacing

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ section {
 
 .section-container {
   display: flex;
-  margin-top: -5rem;
+  margin-top: 4rem;
 }
 
 /* PROFILE SECTION */
@@ -313,7 +313,8 @@ section {
 
 #about {
   position: relative;
-  margin-top: 15rem;
+  margin-top: -5rem;
+  margin-bottom: 15rem;
 }
 
 .about-containers {
